# gentoo-haskell

./: .authorspellings  .gitignore  .travis.yml  Jenkinsfile  Makefile  README.rst  TODO  build-ghc-bin.sh  ghc6.4.1-configure.patch  sets.conf  status_ghc6.4.txt
.github/: pull_request_template.md
HackPort/: Action.hs  Bash.hs  Cabal2Ebuild.hs  Cache.hs  Config.hs  Diff.hs  Error.hs  Fetch.hs  GenerateEbuild.hs  Main.hs  Portage.hs  Query.hs  TarUtils.hs  Verbosity.hs  hackport.cabal
app-emulation/: ganeti-htools-0.3.0.ebuild  ganeti-htools-0.3.1.ebuild
cabal2conf/: Makefile  cabal2conf.hs
cabal2ebuild/: Makefile  cabal2ebuild.hs
eclass/: darcs.eclass  ghc-package.eclass  haskell-cabal.eclass
juicypixels/: Manifest  juicypixels-3.0.ebuild
metadata/: layout.conf  pkg_desc_index  timestamp.chk
portage/: README
portage/dev-haskell/haxml/files/: HaXml-1.12.cabal  digest-haxml-1.12  haxml-1.15-parse-error.patch
profiles/: categories  make.defaults  package.mask  package.mask.orig  package.use.force  package.use.mask  profiles.desc  repo_name  thirdpartymirrors  use.desc  use.local.desc  use.mask
projects/: GHC-6.10-failures  GHC-6.10.2-update.html  GHC-6.10.2-update.rst  GHC-6.12-RC2-failures  GHC-6.12-failures  GHC-6.12.3-failures.html  GHC-6.12.3-failures.rst  GHC-6.5-failures.html  GHC-6.5-failures.rst  GHC-6.6-conversion  Makefile  TODO  (+19 more)
projects/HackPort/: Action.hs  Bash.hs  Cabal2Ebuild.hs  Cache.hs  Config.hs  Error.hs  Fetch.hs  GenerateEbuild.hs  Index.hs  Main.hs  MaybeRead.hs  Portage.hs  Setup.hs  TarUtils.hs  cabal2ebuild.hs  hackport.cabal
(+49612 files in other folders)
