Name:		HackPort
Version:	0.2
License:	GPL
Author:		Henning Günther
Build-Depends:	base, network, mtl, HTTP, Cabal < 1.1.7, filepath, regex-compat, tar, zlib
Synopsis:	Hackage and Portage integration tool

Executable:	hackport
Main-Is:	Main.hs

Executable:     cabal2ebuild
Main-Is:        cabal2ebuild.hs
