name:		HaXml
version:	1.12
license:	LGPL
license-file:	LICENSE-LGPL
author:		Malcolm Wallace <Malcolm.Wallace@cs.york.ac.uk>
homepage:	http://www.cs.york.ac.uk/fp/HaXml/
category:	Text
synopsis:	Utilities for manipulating XML documents
description:
	Haskell utilities for parsing, filtering, transforming and
	generating XML documents.
exposed-modules:
	Text.ParserCombinators.HuttonMeijerWallace,
	Text.XML.HaXml,
	Text.XML.HaXml.Combinators,
	Text.XML.HaXml.DtdToHaskell.Convert,
	Text.XML.HaXml.DtdToHaskell.Instance,
	Text.XML.HaXml.DtdToHaskell.TypeDef,
	Text.XML.HaXml.Escape,
	Text.XML.HaXml.Haskell2Xml,
	Text.XML.HaXml.Html.Generate,
	Text.XML.HaXml.Html.Parse,
	Text.XML.HaXml.Html.Pretty,
	Text.XML.HaXml.Lex,
	Text.XML.HaXml.OneOfN,
	Text.XML.HaXml.Parse,
	Text.XML.HaXml.Pretty,
	Text.XML.HaXml.Types,
	Text.XML.HaXml.Validate,
	Text.XML.HaXml.Verbatim,
	Text.XML.HaXml.Wrappers,
	Text.XML.HaXml.Xml2Haskell,
	Text.XML.HaXml.Xtract.Combinators,
	Text.XML.HaXml.Xtract.Lex,
	Text.XML.HaXml.Xtract.Parse
hs-source-dir:	src
build-depends:	base, haskell98
extensions:	CPP
exposed:	True
